--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
         <dd>забезпечує населення продуктами харчування, тваринництво-кормами, харчову, переробну і легку промисловість -сировиною, зовнішню торгівлю - експортними товарами. Воно охоплює цілий ряд галузей: зернове господарство, вирощування олійних культур, картоплі, городини, кормових та інших культур. </dd>
         </dl></ul>
     </footer>
-    <img src="Garn.png" class="garn">
+    <img src="garn.png" class="garn">
 </body>
 </html>
