--- a/pryani.html
+++ b/pryani.html
@@ -83,6 +83,6 @@
 <p><input type="submit" name="Submit" id="Submit" value="Надіслати"></p>
 
 </form >
-    <img src="Garn.png" class="garn">
+    <img src="garn.png" class="garn">
 </body>
 </html>
