--- a/Ovochi.html
+++ b/Ovochi.html
@@ -190,6 +190,6 @@
     </tr>
 </table>
     </footer>
-    <img src="Garn.png" class="garn">
+    <img src="garn.png" class="garn">
 </body>
 </html>
