--- a/pryani.html
+++ b/pryani.html
@@ -18,7 +18,7 @@
                             <ul>
                                 <li class="lii"><a href="Ovochi.html">Овочі</a></li>
                                 <li class="lii"><a href="Flower.html">Квіти</a></li>
-                                <li class="lii"><a href="Pryani.html">Пряні та лікарсткі</a></li>
+                                <li class="lii"><a href="pryani.html">Пряні та лікарсткі</a></li>
                                 <li class="lii"><a href="">Тютюн</a></li>
                                 <li class="lii"><a href="">Дерева</a></li>
                                 <li class="lii"><a href="">Рідкісні</a></li>
