--- a/Flower.html
+++ b/Flower.html
@@ -17,8 +17,8 @@
                         <div class="dropdown-content">
                             <ul>
                                 <li class="lii"><a href="Ovochi.html">Овочі</a></li>
-                                <li class="lii"><a href="">Квіти</a></li>
-                                <li class="lii"><a href="">Пряні та лікарсткі</a></li>
+                                <li class="lii"><a href="Flower.html">Квіти</a></li>
+                                <li class="lii"><a href="pryani.html">Пряні та лікарсткі</a></li>
                                 <li class="lii"><a href="">Тютюн</a></li>
                                 <li class="lii"><a href="">Дерева</a></li>
                                 <li class="lii"><a href="">Рідкісні</a></li>
@@ -81,6 +81,6 @@
             <source src="garden.mp4" type="video/mp4">
         </video>
     </footer>
-    <img src="Garn.png" class="garn">
+    <img src="garn.png" class="garn">
 </body>
 </html>
